interface IOption {

    public String onLand(Player p);

    public String onAccept(Player p);

    public String onReject(Player p);
}
